--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -1,20 +1,22 @@
-{% extends 'base.html.twig' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pin</title>
+</head>
+<body>
+    
+    <h1>index Pin</h1>
 
-{% block title %}Hello PinsController!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/nijea/OneDrive/Documents/CODE/Abraham/dad_237/src/Controller/PinsController.php'|file_link(0) }}">src/Controller/PinsController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/nijea/OneDrive/Documents/CODE/Abraham/dad_237/templates/pins/index.html.twig'|file_link(0) }}">templates/pins/index.html.twig</a></code></li>
-    </ul>
-</div>
-{% endblock %}
+    {% for pin in pins %}
+        <article>
+           <h1> {{ pin.title }}</h1>
+           <p>
+               {{ pin.description }}
+           </p>
+        </article>
+        
+    {% endfor %}
+</body>
+</html>
